@@ -1,43 +1,71 @@
 package orowan;
-import java.io.BufferedReader;
-import java.io.IOException;
-import java.io.InputStreamReader;
+import java.io.*;
 
 
 public class OrowanLauncher {
 
-    public  OrowanLauncher(){
+    public OrowanLauncher() {
 
     }
 
-    public void launch() throws IOException, InterruptedException {
+    public void launch(String path) throws IOException, InterruptedException {
+        //String arguments = "src/orowan/Orowan_x64.exe.exe";
+        String executablePath = "path/to/OrowanConsole_x64.exe";
+        String[] arguments = {"src/orowan/Orowan_x64.exe.exe", "i", "c",path, "tv.txt"};
+
         try {
-            // Lancer le fichier "monfichier.exe"
-            Process process = Runtime.getRuntime().exec("src/orowan/Orowan_x64.exe.exe");
+            // Créer un processus pour l'exécutable
+            ProcessBuilder builder = new ProcessBuilder(arguments);
 
-            // Obtenir le flux d'entrée du fichier .exe
-            BufferedReader in = new BufferedReader(new InputStreamReader(process.getInputStream()));
+            // Rediriger la sortie standard et d'erreur vers la console
+            builder.redirectOutput(ProcessBuilder.Redirect.INHERIT);
+            builder.redirectError(ProcessBuilder.Redirect.INHERIT);
 
-            // Envoyer une entrée au fichier .exe
-            process.getOutputStream().write("i".getBytes());
+            // Démarrer le processus
+            Process process = builder.start();
+            // Obtenir le flux de sortie de l'exécutable
+            OutputStream stdin = process.getOutputStream();
 
-            // Récupérer la sortie du fichier .exe
-            String sortie = "";
-            String ligne;
-            while ((ligne = in.readLine()) != null) {
-                sortie += ligne + "\n";
+            // Écrire la commande "i" sur le flux stdin
+            String input = "i";
+            stdin.write(input.getBytes());
+            stdin.write(System.lineSeparator().getBytes());
+            stdin.flush();
+
+// Écrire la commande "c" sur le flux stdin
+            input = "c";
+            stdin.write(input.getBytes());
+            stdin.write(System.lineSeparator().getBytes());
+            stdin.flush();
+
+            input = "src/file/inv_cst.txt";
+            stdin.write(input.getBytes());
+            stdin.write(System.lineSeparator().getBytes());
+            stdin.flush();
+
+            input = "src/file/output2.txt";
+            stdin.write(input.getBytes());
+            stdin.write(System.lineSeparator().getBytes());
+            stdin.flush();
+
+// Attendre 10 secondes
+            Thread.sleep(5000);
+
+            // Forcer la fermeture de l'exécutable
+            process.destroy();
+
+            // Attendre que le processus se termine
+            int exitCode = process.waitFor();
+            if (exitCode == 0) {
+                System.out.println("L'exécutable s'est terminé avec succès.");
+            } else {
+                System.err.println("L'exécutable s'est terminé avec une erreur. Code de sortie : " + exitCode);
             }
 
-            // Attendre la fin de l'exécution du fichier .exe
-            int exitValue = process.waitFor();
-            System.out.println("Le fichier .exe a été exécuté avec le code de sortie : " + exitValue);
-
-            // Afficher la sortie du fichier .exe
-            System.out.println("Sortie du fichier .exe : \n" + sortie);
         } catch (IOException e) {
-            e.printStackTrace();
+            System.err.println("Erreur lors de l'exécution de l'exécutable : " + e.getMessage());
         } catch (InterruptedException e) {
-            e.printStackTrace();
+            System.err.println("Le processus a été interrompu : " + e.getMessage());
         }
     }
 }
